Squashed commit of the following:
commit d8e90a9ac2f4ebcfb8648d7330e04dc70ced76d7
Author: Denis <foxtrot13.88@yandex.ru>
Date:   Mon Feb 5 22:16:31 2024 +1000

    feat: kube httpget probe profile

commit 35f5b61423c35e39516dd75bed7bab6c331a3ccf
Author: Denis <foxtrot13.88@yandex.ru>
Date:   Mon Feb 5 22:03:18 2024 +1000

    feat: kube httpget probe catalog
